--- a/portfolio-details_3.html
+++ b/portfolio-details_3.html
@@ -34,7 +34,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -55,7 +55,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -67,47 +67,48 @@
               <h2>About Projects</h2>
               <p>
                Title: Facial Recognition Aviation Boarding</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-<p>Problem Statement:</p>
+<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
+<p><b>Problem Statement:</b></p>
 
 In this use case study, I have to work on unique solution that were new to india and its future users to make their life easy at airport and save their precious time and effort of the airport security with 100% safety of the airport and passenger. The goal of aviation project ux design is to apply enhanced user experience and create a better overall airport experience for both the passenger and for airport staff.
 
-<span>Requirements:<span>
+<p><b>Requirements:</b></p>
 
 <p>
 In order to design a aviation ux design, we need to understand the requirements of the passenger and the steps they followed on from starting of the airport entry to the last of entering into the plane as well as know the SOP of the airport staff how they manage passenger and follow the protocol. This includes understanding what needs to be improved/implemented w.r.t to implement our facial recognition software as well as follow their proper protocol to adhere the security requirements
 
 We have requirements like
 <ol>
-Need to take boarding passes from passengers into databases and proper cross check the same then allow them to enter airport after proper validation
-Need to allow passenger to enter without touching or giving any identification documents only allow them to enter on the basis of their picture in real time and their boading passes
-Allow passengers to enter through security checks and boarding of the plane gate(The last gate) by scanning their faces that they uploaded on real time by clicking photos
-Need to some kind of dashboard that will show all the data to the admin or staff like what is the total enrollment number out which hiow many are active. Like wise check-in information of the passenger, baggae drop coun,security clearance and if travelling to international location then immigration as well as boarding the gates of the plane/aircraft
-Need live monitoring of the data
-User management to manage the rights
-Setting up business rule and configuring the alert management if their were alert or setting up alerts for the devices</ol>
-<p>User research:</p>  
+<li>Need to take boarding passes from passengers into databases and proper cross check the same then allow them to enter airport after proper validation</li>
+<li>Need to allow passenger to enter without touching or giving any identification documents only allow them to enter on the basis of their picture in real time and their boading passes</li>
+<li>Allow passengers to enter through security checks and boarding of the plane gate(The last gate) by scanning their faces that they uploaded on real time by clicking photos</li>
+<li>Need to some kind of dashboard that will show all the data to the admin or staff like what is the total enrollment number out which hiow many are active. Like wise check-in information of the passenger, baggae drop coun,security clearance and if travelling to international location then immigration as well as boarding the gates of the plane/aircraft</li>
+<li>Need live monitoring of the data</li>
+<li>User management to manage the rights</li>
+<li>Setting up business rule and configuring the alert management if their were alert or setting up alerts for the devices</li>
+</ol>
+<p><b>User research:</b></p>  
 <p>
 User research is essential for understanding the needs of the passengers and airport staff. This involves interviewing various passengers and observing how many time they interact with the staff/airport security, what are the problems they usually face, how they tackle the same during peak time. We want to know what they like and don't like about the airport process of boarding, and uncover any problems that they face.
 
 The methods we used were:
 <ol>
-Competitive Analysis
-Surveys
-User Interviews
-Persona Development</ol>
+<li>Competitive Analysis</li>
+<li>Surveys</li>
+<li>User Interviews</li>
+<li>Persona Development</li></ol>
 </p>
 <p>
 So for the same user interview i have conducted on the one airport and nearly to 18-20 passenger as well as airport staff and recorded their response to do the analysis of the data to understand the pain area and implement the same into low fidelity wireframe for collecting further review and comments from the users of the applications
 </p>
-<p>
-Ideation & testing
+<p><b>
+Ideation & testing</b>
 </p>
 <p>
 I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
 </p>
   <p>
-  User Interface Design
+  <b>User Interface Design</b>
   </p>
   <p>
   Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use,provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for the passenger as well as for airport staff who gonna track the data live as well as analysis the same for further improvement of the user experience/convience on the airport.
