--- a/portfolio-details_4.html
+++ b/portfolio-details_4.html
@@ -33,7 +33,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -62,42 +62,44 @@
               <h2>About Projects</h2>
               <p>
                Title: IDMS</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-<p>Problem Statement:</p>
+<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
+<p><b>Problem Statement:</b></p>
 
 In this use case study, I have to work on touchpoint configuration solution in which we have to build platform where admin can control or manage user access on various touchpoint(gates,restriced access zone) The goal of IDMS project ux design is to apply enhanced user experience and create a better overall Admin console for the staff experience.
-<span>Requirements:<span>
+<p><b>Requirements:</b></p>
 
 <p>
 In order to design a IDMS ux design, we need to understand the requirements of the staff/admin like what are the feature they planned or want as a tool to enhance their productivity in minimal efforts and with more security. This includes understanding what needs to be improved/implemented w.r.t to implement or integrate various APIs that need to be intgrated at the platform that have unique feature or operation to perform
 
 We have requirements like
 <ol>
-Need to integrate APIs that were reponsibke for managing the database of the users access to the various touchpoint
-Need to show data of various kiosk,ticket counter,security gates,boarding gates, unmapped sensors
-Need to show user data with all information in grid view in order to understand his/her access rights to various points and under on which company they belong
-Show various live tracking data of the APIs responses and present into suitable datatables for the filteration of the data on the basis of various filter like touchpoint, date, name etc.</ol>
-<p>User research:</p>  
+<li>Need to integrate APIs that were reponsibke for managing the database of the users access to the various touchpoint</li>
+<li>Need to show data of various kiosk,ticket counter,security gates,boarding gates, unmapped sensors</li>
+<li>Need to show user data with all information in grid view in order to understand his/her access rights to various points and under on which company they belong</li>
+<li>Show various live tracking data of the APIs responses and present into suitable datatables for the filteration of the data on the basis of various filter like touchpoint, date, name etc.</li>
+</ol>
+<p><b>User research:</b></p>  
 <p>
 User research is essential for understanding the needs of staff/Admins. This involves interviewing various staff and observing how they interact with the system ,under which age group they falls ,how much technical sounds they were, what are the problems they usually face, how they tackle the same during peak time. We want to know what are the things they need to track on regular basis and which information is crucial.
 
 The methods we used were:
 <ol>
-Competitive Analysis
-Surveys
-User Interviews
-Persona Development</ol>
+<li>Competitive Analysis</li>
+<li>Surveys</li>
+<li>User Interviews</li>
+<li>Persona Development</li>
+</ol>
 </p>
 <p>
 For interview i interview future admins/reponsible person of the application and gather data like How many APIs we have, how many sensor are there, how they want data to be maintained. how they want data to be represented, filtered, what are the data that need to do analytics to show the same in more creative and unique way for better user experience.</p>
-<p>
-Ideation & testing
+<p><b>
+Ideation & testing</b>
 </p>
 <p>
 I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
 </p>
   <p>
-  User Interface Design
+  <b>User Interface Design</b>
   </p>
   <p>
   Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use,provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for admins/staff who gonna track the data or use the data and maintained the live data as well as analysis the same.
