--- a/portfolio-details_4.html
+++ b/portfolio-details_4.html
@@ -65,7 +65,7 @@
 <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
 <p><b>Problem Statement:</b></p>
 
-In this use case study, I have to work on touchpoint configuration solution in which we have to build platform where admin can control or manage user access on various touchpoint(gates,restriced access zone) The goal of IDMS project ux design is to apply enhanced user experience and create a better overall Admin console for the staff experience.
+<p>In this use case study, I have to work on touchpoint configuration solution in which we have to build platform where admin can control or manage user access on various touchpoint(gates,restriced access zone) The goal of IDMS project ux design is to apply enhanced user experience and create a better overall Admin console for the staff experience.</p>
 <p><b>Requirements:</b></p>
 
 <p>
