--- a/portfolio-details_5.html
+++ b/portfolio-details_5.html
@@ -34,7 +34,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -47,7 +47,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -59,42 +59,43 @@
               <h2>About Projects</h2>
               <p>
                Title: DP World</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-<p>Problem Statement:</p>
+<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
+<p><b>Problem Statement:</b></p>
 
-In this use case study, I have to work on DP World Tool in which we have to create a tool that help to track and collect/maintain information of the containers off loaded from ship and loaded on trucks for further destination within India. The goal of DP world project ux design is to apply enhanced user experience and create a better overall DP world tool for the staff/Admin user experience to track the live status of the truck,sales, order created , Employee attendance and admin setting for configuring the tool features.
-<span>Requirements:<span>
+<p>In this use case study, I have to work on DP World Tool in which we have to create a tool that help to track and collect/maintain information of the containers off loaded from ship and loaded on trucks for further destination within India. The goal of DP world project ux design is to apply enhanced user experience and create a better overall DP world tool for the staff/Admin user experience to track the live status of the truck,sales, order created , Employee attendance and admin setting for configuring the tool features.</p>
+<p><b>Requirements:</b></p>
 
 <p>
 In order to design a DP world ux design, we need to understand the requirements of the staff/admin like what are the feature they planned or want as a tool to enhance their productivity in minimal efforts and with more security. This includes understanding what needs to be improved/implemented w.r.t to implement or integrate various APIs that need to be intgrated at the platform that have unique feature or operation to perform
 
 We have requirements like
 <ol>
-Need to create dashboard that shows real time data of the sales monthly wise as well as yearly wise according to the filter set by admin and total revenue
-Need to create order creation forms in order ot raise the order and that form have pre-requisites fields with mandatory fields
-Gather employee attendance data on the tool via punching machine data ,so need to show the same data in datatables and record the best performer and worst performer on the basis of attendance and order creation as well as sales done
-Need to show data of the container movement from offloaded to reaching the desired destination</ol>
-<p>User research:</p>  
+<li>Need to create dashboard that shows real time data of the sales monthly wise as well as yearly wise according to the filter set by admin and total revenue</li>
+<li>Need to create order creation forms in order ot raise the order and that form have pre-requisites fields with mandatory fields</li>
+<li>Gather employee attendance data on the tool via punching machine data ,so need to show the same data in datatables and record the best performer and worst performer on the basis of attendance and order creation as well as sales done</li>
+<li>Need to show data of the container movement from offloaded to reaching the desired destination</li>
+</ol>
+<p><b>User research:</b></p>  
 <p>
 User research is essential for understanding the needs of staff/Admins. This involves interviewing various staff and observing how they interact with the system ,under which age group they falls ,how much technical sounds they were, what are the problems they usually face, how they tackle the same during peak time. We want to know what are the things they need to track on regular basis and which information is crucial.
 
 The methods we used were:
 <ol>
-Competitive Analysis
-Surveys
-User Interviews
-Persona Development</ol>
+<li>Competitive Analysis</li>
+<li>Surveys</li>
+<li>User Interviews</li>
+<li>Persona Development</li></ol>
 </p>
 <p>
 For interview i interview future admins/reponsible person of the application and gather data like How many APIs we have, how many sensor are there, how they want data to be maintained. how they want data to be represented, filtered, what are the data that need to do analytics to show the same in more creative and unique way for better user experience.</p>
 <p>
-Ideation & testing
+<b>Ideation & testing</b>
 </p>
 <p>
 I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
 </p>
   <p>
-  User Interface Design
+  <b>User Interface Design</b>
   </p>
   <p>
   Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use,provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for admins/staff who gonna track the data or use the data and maintained the live data as well as analysis the same.
