--- a/portfolio-details_6.html
+++ b/portfolio-details_6.html
@@ -33,7 +33,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -62,41 +62,43 @@
               <h2>About Projects</h2>
               <p>
                Title: ArchPro & MigratePro</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-<p>Problem Statement:</p>
+<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
+<p><b>Problem Statement:</b></p>
 
-In this use case study, I have to work on ArchPro and MigratePro in which we have to create a tool that help to track and collect/maintain information of the servers(VMs,SQL server and all). The goal of ArchPro and MigratePro project ux design is to apply enhanced user experience and create a better overall ArchPro and MigratePro tool for the users user experience to track the live status of the machines deploy on cloud or on-premises as well perform decision analytics.
-<span>Requirements:<span>
+<p>In this use case study, I have to work on ArchPro and MigratePro in which we have to create a tool that help to track and collect/maintain information of the servers(VMs,SQL server and all). The goal of ArchPro and MigratePro project ux design is to apply enhanced user experience and create a better overall ArchPro and MigratePro tool for the users user experience to track the live status of the machines deploy on cloud or on-premises as well perform decision analytics.
+</p>
+              <p><b>Requirements:</b></p>
 
 <p>
 In order to design a ArchPro and MigratePro ux design, we need to understand the requirements of the user like what are the feature they planned or want as a tool to enhance their productivity in minimal efforts and with more security. This includes understanding what needs to be improved/implemented in both tool as both tool have different functionality but workflow of the information are same,as in one tool we are doing the migration of the machine from on-prem to cloud or cloud to on-prem whereas in another tool architecture decison of the application has been made on the basis of some some question answer that user filled according to the their needs of the machines
 
 We have requirements like
 <ol>
-Need to create dashboard on both the application to view data in real time that we are getting from APIs response and can perform actions like edit,delete,view information under request number in order to maintin consistency workflow,color theory,accessiblity feature and look and feel were made similiar so as the the user don't have to scroll or change eye view as both the application are the part of self service portal where they were hosted on common platform like a app
-Need to create question for the user to ask specific information so that action can be performed accordingly
-Need to create drawer to show information of the request id like servers,SQL information and many other informations
-Need to create search page where user can directly search the request id,virtual machine,resource group and cost center and perform action directly from without changing the page.</ol>
-<p>User research:</p>  
+<li>Need to create dashboard on both the application to view data in real time that we are getting from APIs response and can perform actions like edit,delete,view information under request number in order to maintin consistency workflow,color theory,accessiblity feature and look and feel were made similiar so as the the user don't have to scroll or change eye view as both the application are the part of self service portal where they were hosted on common platform like a app</li>
+<li>Need to create question for the user to ask specific information so that action can be performed accordingly</li>
+<li>Need to create drawer to show information of the request id like servers,SQL information and many other informations</li>
+<li>Need to create search page where user can directly search the request id,virtual machine,resource group and cost center and perform action directly from without changing the page.</li>
+</ol>
+<p><b>User research:</b></p>  
 <p>
 User research is essential for understanding the needs of users. This involves interviewing various users and observing how they interact with the system ,under which age group they falls ,how much technical sounds they were, what are the problems they usually face, how they tackle the failover cases of the deployed machine or misconfigure of the IPs and other factors. I want to know what are the things they need to track on regular basis and which information is crucial.
 
 The methods we used were:
 <ol>
-Competitive Analysis
-Surveys
-User Interviews
-Persona Development</ol>
+<li>Competitive Analysis</li>
+<li>Surveys</li>
+<li>User Interviews</li>
+<li>Persona Development</li></ol>
 </p>
 <p>
 For interview i interview users of the services and gather data like How many APIs we have, what are the machine that i am taking care and give as a service to the users, how they want data to be maintained. how they want data to be represented, filtered, what are the data that need to do analytics to show the same in more creative and unique way for better user experience.<p>
-Ideation & testing
+<p><b>Ideation & testing</b></p>
 </p>
 <p>
 I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
 </p>
-  <p>
-  User Interface Design
+  <p><b>
+  User Interface Design</b>
   </p>
   <p>
  Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use, provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for admins/staff who gonna track the data or use the data and maintained the live data as well as analysis the same.
