--- a/portfolio-details_7.html
+++ b/portfolio-details_7.html
@@ -33,7 +33,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -61,9 +61,9 @@
             <div class="portfolio-description">
               <h2>About Projects</h2>
               <p>
-               Title: COST(Cloud Optimisation Tool)</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-<p>Problem Statement:</p>
+               Title: COST (Cloud Optimisation Tool)</p>
+<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
+<p><b>Problem Statement:</b></p>
 
 In this use case study, I have to work on Cost Management Tool in which we have to create/replace a tool that help to track and cut down cost on the basis of azure recommendation APIs for the machine deployed on azure. On the basis of usuage and consumption of the resources of the Azure by the machnie deployed on azure cloud ,Azure APIs will send the recommendation and on that basis tool will suggest the new cost saving and previous cost investment and the differnce of the both that depend on company standard and SOPs. The goal of Cost Management Tool project ux design is to apply enhanced user experience and create a better overall Cost Management Tool tool for the users user experience to track the live status of the machines deploy on cloud as well perform decision analytics.
 
@@ -72,37 +72,37 @@ Right now organization using IBM tool turbonomics for the same that costs organi
 
 <p>
 In order to design a Cost Management Tool ux design, we need to understand the requirements of the user/stakholder/higher management like what are the feature they planned or want as a tool to enhance their productivity in minimal efforts and with more security. This includes understanding what needs to be improved/implemented in tool so that later on customization can be possible and tool should be user friendly with accessiblity feature and usabality.
-
+</p>
 We have requirements like
 <ol>
-Need to create search page on which searching can be done through various filter like virtual machine,resource group,cost center,support group and all and result will be visible in card as well as list format for the usablity purpose
-Need to create drawer that can be utilised in dashboard,search page to view the information and under the request ID and parameters of the deployed machine with all the analytics like cost saving new instances, old instances,support group etc
-Need to create policy pages for creating or defining the policies for the implemntation of down sizing or upsizing in order to save costs
-Need to create user management page for the application that can be accessible to the admins for managing the access for the users.
-Need to create Hierarchy view or timeline view for showing history of the request id actions like if exception raised in order to prevent auto down sizing of the resources user should have option to raise request by clicking minimal click to submit request so admin can reject or accept the same request SO timeline view so brief information of the request ID history when created and what action have been taken till now and wht will be the result of the actions.
-Need to create dashboard to approve or reject or view request for the admins to approve or reject and view detailed information of the request and for user to view and track their request staus.
+<li>Need to create search page on which searching can be done through various filter like virtual machine,resource group,cost center,support group and all and result will be visible in card as well as list format for the usablity purpose</li>
+<li>Need to create drawer that can be utilised in dashboard,search page to view the information and under the request ID and parameters of the deployed machine with all the analytics like cost saving new instances, old instances,support group etc</li>
+<li>Need to create policy pages for creating or defining the policies for the implemntation of down sizing or upsizing in order to save costs</li>
+<li>Need to create user management page for the application that can be accessible to the admins for managing the access for the users.</li>
+<li>Need to create Hierarchy view or timeline view for showing history of the request id actions like if exception raised in order to prevent auto down sizing of the resources user should have option to raise request by clicking minimal click to submit request so admin can reject or accept the same request SO timeline view so brief information of the request ID history when created and what action have been taken till now and wht will be the result of the actions.</li>
+<li>Need to create dashboard to approve or reject or view request for the admins to approve or reject and view detailed information of the request and for user to view and track their request staus.</li>
 </ol>
-<p>User research:</p>  
+<p><b>User research:</b></p>  
 <p>
 User research is essential for understanding the needs of users. This involves interviewing various users and observing how they interact with the system ,under which age group they falls ,how much technical sounds they were, what are the problems they usually face, how they tackle the failover cases of the deployed machine or misconfigure of the IPs and other factors. I want to know what are the things they need to track on regular basis and which information is crucial.
 
 The methods we used were:
 <ol>
-Competitive Analysis
-Surveys
-User Interviews
-Persona Development</ol>
+<li>Competitive Analysis</li>
+<li>Surveys</li>
+<li>User Interviews</li>
+<li>Persona Development</li></ol>
 </p>
 <p>
 For interview i interview users of the services and gather data like How many APIs we have, what are the machine that i am taking care and give as a service to the users, how they want data to be maintained. how they want data to be represented, filtered, what are the data that need to do analytics to show the same in more creative and unique way for better user experience.
-<p>
-Ideation & testing
+<p><b>
+Ideation & testing</b>
 </p>
 <p>
 I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
 </p>
   <p>
-  User Interface Design
+ <b> User Interface Design</b>
   </p>
   <p>
  Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use, provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for admins/staff who gonna track the data or use the data and maintained the live data as well as analysis the same.
